@@ -2,6 +2,7 @@ Please view this file on the master branch, on stable branches it's out of date.
 
 v 8.4.0 (unreleased)
   - Implement new UI for group page
+  - Add project permissions to all project API endpoints (Stan Hu)
 
 v 8.3.0
   - Add CAS support (tduehr)
